--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,10 +1,13 @@
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 1.5;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f4f4f4;
 }
 
-.container {
-  max-width: 960px;
-  margin: 0 auto;
+h1{
+  color: rgb(21, 21, 162);
+}
+
+p{
+  font-size: 18px;
 }
